--- a/public/i18n/translations/am.json
+++ b/public/i18n/translations/am.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "የይለፍ ቃል አረጋግጥ",
   "DONT_ACCOUNT": "መለያ የለህም?",
   "ALREADY_ACCOUNT": "መለያ አለህ?",
-  "SKIP": "ፈተለ ጉርሻ",
+  "SKIP": "ነፃ ገንዘብ",
   "SAVE": "አስቀምጥ",
   "SAVED_VIDEOS": "የተቀመጡ ቪዲዮዎች",
   "PERSONAL_TIT": "የግል መረጃ",
