--- a/public/i18n/translations/ar.json
+++ b/public/i18n/translations/ar.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "تأكيد كلمة المرور",
   "DONT_ACCOUNT": "ليس لديك حساب؟",
   "ALREADY_ACCOUNT": "هل لديك حساب؟",
-  "SKIP": "مكافأة سبين",
+  "SKIP": "أموال مجانية",
   "SAVE": "يحفظ",
   "SAVED_VIDEOS": "مقاطع الفيديو المحفوظة",
   "PERSONAL_TIT": "معلومات شخصية",
