--- a/public/i18n/translations/as.json
+++ b/public/i18n/translations/as.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "পাছৱৰ্ড নিশ্চিত কৰক",
   "DONT_ACCOUNT": "একাউণ্ট নাই নেকি?",
   "ALREADY_ACCOUNT": "ইতিমধ্যে একাউণ্ট আছেনে?",
-  "SKIP": "স্পিন বোনাছ",
+  "SKIP": "বিনামূলীয়া টকা",
   "SAVE": "সঞ্চয় কৰা",
   "SAVED_VIDEOS": "সংৰক্ষিত ভিডিঅ'",
   "PERSONAL_TIT": "ব্যক্তিগত তথ্য",
