--- a/public/i18n/translations/ay.json
+++ b/public/i18n/translations/ay.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Contraseña ukar chiqañchaña",
   "DONT_ACCOUNT": "¿Janiw mä cuentanïktati?",
   "ALREADY_ACCOUNT": "¿Nayratpach mä cuentanïtati?",
-  "SKIP": "Bono de giro ukax mä jach’a uñacht’äwiwa",
+  "SKIP": "INAKI QULLQI",
   "SAVE": "Imaña",
   "SAVED_VIDEOS": "Videonak imatäki ukanaka",
   "PERSONAL_TIT": "Jaqina yatiyawipa",
