--- a/public/i18n/translations/az.json
+++ b/public/i18n/translations/az.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Şifrəni təsdiqləyin",
   "DONT_ACCOUNT": "Hesabınız yoxdur?",
   "ALREADY_ACCOUNT": "Artıq bir hesabınız var mı?",
-  "SKIP": "Spin bonusu",
+  "SKIP": "PULSUZ PUL",
   "SAVE": "Yadda saxla",
   "SAVED_VIDEOS": "Saxlanan Videolar",
   "PERSONAL_TIT": "Şəxsi məlumat",
