--- a/public/i18n/translations/be.json
+++ b/public/i18n/translations/be.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Пацвердзіце пароль",
   "DONT_ACCOUNT": "У вас няма акаўнта?",
   "ALREADY_ACCOUNT": "У вас ужо ёсць уліковы запіс?",
-  "SKIP": "Спін бонус",
+  "SKIP": "БЯСПЛАТНЫЯ ГРОШЫ",
   "SAVE": "Захаваць",
   "SAVED_VIDEOS": "Захаваныя відэа",
   "PERSONAL_TIT": "Асабістая інфармацыя",
