--- a/public/i18n/translations/bm.json
+++ b/public/i18n/translations/bm.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "A’ ye Password dafa",
   "DONT_ACCOUNT": "I t’a fɛ ka jatebɔsɛbɛn sɔrɔ wa?",
   "ALREADY_ACCOUNT": "I ye jatebɔsɛbɛn sɔrɔ kaban wa?",
-  "SKIP": "Bonus min bɛ kɛ ni spin ye",
+  "SKIP": "WARI GANA",
   "SAVE": "Ka mara",
   "SAVED_VIDEOS": "Wideyo minnu maralen bɛ",
   "PERSONAL_TIT": "Mɔgɔ yɛrɛ ka kunnafoniw",
