--- a/public/i18n/translations/bn.json
+++ b/public/i18n/translations/bn.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "পাসওয়ার্ড নিশ্চিত করুন",
   "DONT_ACCOUNT": "একটি অ্যাকাউন্ট নেই?",
   "ALREADY_ACCOUNT": "ইতিমধ্যে একটি সদস্যপদ আছে?",
-  "SKIP": "এড়িয়ে যান",
+  "SKIP": "বিনামূল্যে টাকা",
   "SAVE": "সংরক্ষণ",
   "SAVED_VIDEOS": "সংরক্ষিত ভিডিও",
   "PERSONAL_TIT": "ব্যক্তিগত তথ্য",
