--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -14,7 +14,7 @@
   "N_PASSWORD": "New Password",
   "DONT_ACCOUNT": "Don’t have an account?",
   "ALREADY_ACCOUNT": "Already have an account?",
-  "SKIP": "Spin bonus",
+  "SKIP": "FREE MONEY",
   "SAVE": "Save",
   "SAVED_VIDEOS": "Saved Videos",
   "PERSONAL_TIT": "Personal information",
