--- a/public/i18n/translations/eu.json
+++ b/public/i18n/translations/eu.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "pasahitza baieztatu",
   "DONT_ACCOUNT": "Ez al duzu konturik?",
   "ALREADY_ACCOUNT": "Kontu bat al duzu dagoeneko?",
-  "SKIP": "Spin bonusa",
+  "SKIP": "DOAKO DIRUA",
   "SAVE": "Gorde",
   "SAVED_VIDEOS": "Gordetako bideoak",
   "PERSONAL_TIT": "Informazio pertsonala",
