--- a/public/i18n/translations/fa.json
+++ b/public/i18n/translations/fa.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "رمز عبور را تایید کنید",
   "DONT_ACCOUNT": "حساب کاربری ندارید؟",
   "ALREADY_ACCOUNT": "از قبل حساب کاربری دارید؟",
-  "SKIP": "جایزه اسپین",
+  "SKIP": "پول رایگان",
   "SAVE": "صرفه جویی",
   "SAVED_VIDEOS": "ویدئوهای ذخیره شده",
   "PERSONAL_TIT": "اطلاعات شخصی",
