--- a/public/i18n/translations/hy.json
+++ b/public/i18n/translations/hy.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Հաստատել գաղտնաբառը",
   "DONT_ACCOUNT": "Չունե՞ք հաշիվ:",
   "ALREADY_ACCOUNT": "Արդեն ունեք հաշիվ?",
-  "SKIP": "Spin բոնուս",
+  "SKIP": "ԱՆՎՃԱՐ ՓՈՂ",
   "SAVE": "Պահպանել",
   "SAVED_VIDEOS": "Պահված տեսանյութեր",
   "PERSONAL_TIT": "Անձնական տվյալներ",
