--- a/public/i18n/translations/pl.json
+++ b/public/i18n/translations/pl.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Potwierdź hasło",
   "DONT_ACCOUNT": "Nie masz konta?",
   "ALREADY_ACCOUNT": "Posiadasz już konto?",
-  "SKIP": "Zakręć bonusem",
+  "SKIP": "DARMOWE PIENIĄDZE",
   "SAVE": "Ratować",
   "SAVED_VIDEOS": "Zapisane filmy",
   "PERSONAL_TIT": "Informacje osobiste",
