--- a/public/i18n/translations/sq.json
+++ b/public/i18n/translations/sq.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Konfirmo fjalëkalimin",
   "DONT_ACCOUNT": "Nuk keni një llogari?",
   "ALREADY_ACCOUNT": "Posedoni një llogari?",
-  "SKIP": "Bonus rrotullimi",
+  "SKIP": "PARA FALAS",
   "SAVE": "Ruaj",
   "SAVED_VIDEOS": "Videot e ruajtura",
   "PERSONAL_TIT": "Informata personale",
