--- a/public/i18n/translations/vi.json
+++ b/public/i18n/translations/vi.json
@@ -14,7 +14,7 @@
   "N_PASSWORD": "Mật khẩu mới",
   "DONT_ACCOUNT": "Bạn chưa có tài khoản?",
   "ALREADY_ACCOUNT": "Bạn đã có tài khoản?",
-  "SKIP": "Tiền thưởng quay",
+  "SKIP": "TIỀN MIỄN PHÍ",
   "SAVE": "Lưu",
   "SAVED_VIDEOS": "Video đã lưu",
   "PERSONAL_TIT": "Thông tin cá nhân",
