--- a/public/i18n/translations/xh.json
+++ b/public/i18n/translations/xh.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "Ngqina iphasiwedi",
   "DONT_ACCOUNT": "Awunayo iakhawunti?",
   "ALREADY_ACCOUNT": "Ngaba sele unayo i-akhawunti?",
-  "SKIP": "Spin ibhonasi",
+  "SKIP": "IMALI YAMAHHALA",
   "SAVE": "Gcina",
   "SAVED_VIDEOS": "Iividiyo ezigciniweyo",
   "PERSONAL_TIT": "Inkcukacha zimntu",
