--- a/public/i18n/translations/bho.json
+++ b/public/i18n/translations/bho.json
@@ -15,7 +15,7 @@
   "C_PASSWORD": "पासवर्ड के पुष्टि करीं",
   "DONT_ACCOUNT": "खाता नइखे?",
   "ALREADY_ACCOUNT": "पहिलहीं से खाता बा?",
-  "SKIP": "छोड़ दऽ",
+  "SKIP": "मुफ्त में पईसा दिहल जाला",
   "SAVE": "बचावल",
   "SAVED_VIDEOS": "सेव कइल गइल वीडियो",
   "PERSONAL_TIT": "निजी जानकारी के बारे में बतावल गइल बा",
