--- a/public/i18n/translations/en.json
+++ b/public/i18n/translations/en.json
@@ -4,7 +4,7 @@
   "OFFICIALLY_ACTIVE": "Officially active",
   "GET_MORE": "Get more spin turns",
   "PUSH_ADS": "Money Ads",
-  "SPIN_DESC": "You need to leave information in the notes in case of asking for a transfer, we will contact you through the information provided.",
+  "SPIN_DESC": "You need to leave information in the notes in case of asking for a transfer, we will contact you through the information provided. (ex: username)",
   "TOP_UP": "Top up",
   "VIEWS": "Views",
   "CONTACT_EMAIL": "Please contact us via email",
