--- a/public/i18n/translations/vi.json
+++ b/public/i18n/translations/vi.json
@@ -4,7 +4,7 @@
   "OFFICIALLY_ACTIVE": "Hoạt động chính thức",
   "GET_MORE": "Nhận thêm lượt quay",
   "PUSH_ADS": "Tiền quảng cáo",
-  "SPIN_DESC": "Quý khách cần để lại thông tin tại phần ghi chú trong trường hợp nhờ chuyển khoản, chúng tôi sẽ liên hệ với quý khách qua thông tin đã cung cấp.",
+  "SPIN_DESC": "Quý khách cần để lại thông tin tại phần ghi chú trong trường hợp nhờ chuyển khoản, chúng tôi sẽ liên hệ với quý khách qua thông tin đã cung cấp. (Tên đăng nhập)",
   "TOP_UP": "Tăng",
   "VIEWS": "Lượt xem",
   "CONTACT_EMAIL": "Vui lòng liên hệ với chúng tôi qua email",
